src/objects/cb5__CBBudgetLine__c.object
<CustomObject>
    <fields>
        <fullName>AccountApplicableFor__c</fullName>
        <formula>Text(cb5__CBAccount__r.ApplicableFor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Applicable for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__APAheadTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle this field to go forward by an approval process</description>
        <label>AP Ahead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__APBackTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle this field to go back by an approval process</description>
        <label>AP Back Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__APHaveAccessToAhead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User or public group that have access to forward the status</description>
        <label>AP Have Access To Ahead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CB_Budget_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__APHaveAccessToBack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User or public group what have access to back status</description>
        <label>AP Have Access To Back</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CB_Budget_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__APNextStatusName__c</fullName>
        <defaultValue>&apos;Submit&apos;</defaultValue>
        <label>AP Next Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__APPreviousStatusName__c</fullName>
        <label>AP Previous Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Buttontitle__c</fullName>
        <label>Button title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBAccountSign__c</fullName>
        <formula>TEXT(cb5__CBAccount__r.cb5__CBAccountType__r.cb5__Sign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBAccountType__c</fullName>
        <formula>cb5__CBAccount__r.cb5__CBAccountType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBCalculationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Calculation Rule</label>
        <referenceTo>cb5__CBCalculationRule__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBDivisionLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBKey__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBOwnerName__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBScenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Scenario</label>
        <referenceTo>cb5__CBScenario__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBSubAccountName__c</fullName>
        <formula>cb5__CBAccount__r.cb5__CBSubAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Account Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cb5__DrillDownIds__c</fullName>
        <label>Drill Down Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__Lock__c</fullName>
        <label>Lock</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deleting</fullName>
                </value>
                <value>
                    <fullName>Editing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__NFL1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Non-Financial Library 1</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__NFL2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Non-Financial Library 2</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__NFL3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Non-Financial Library 3</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__NFLFormula__c</fullName>
        <label>NFL Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ParentBudgetLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a parent budget line</description>
        <inlineHelpText>Lookup to a parent budget line</inlineHelpText>
        <label>Parent Budget Line</label>
        <referenceTo>cb5__CBBudgetLine__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>ChildrenBudgetLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Status__c</fullName>
        <defaultValue>&apos;Open&apos;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SystemAccessKey__c</fullName>
        <label>System Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cb5__WarningMessage__c</fullName>
        <label>Warning Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__isAllocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the budget line is allocated to simple lines</description>
        <inlineHelpText>True if the budget line is allocated to simple lines</inlineHelpText>
        <label>Is Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__isFormulaBudgetLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is budget line is complex</description>
        <label>Is Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__isTopdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is the current budget line is topdown sum</description>
        <inlineHelpText>True is the current budget line is topdown sum</inlineHelpText>
        <label>is Topdown</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Budget Line</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Lock__c</columns>
        <columns>cb5__CBBudgetYear__c</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBDivision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Budget Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>